--- a/src/styles/react-tabs.css
+++ b/src/styles/react-tabs.css
@@ -14,6 +14,7 @@
   padding-left: 0;
   float: left;
   position: fixed;
+  min-width: 230px;
 }
 
 .react-tabs__tab {
@@ -55,7 +56,7 @@
   left: -4px;
   right: -4px;
   bottom: -5px;
-  background: #fff;
+  background: white;
   display: none;
 }
 
